--- a/index.html
+++ b/index.html
@@ -10,14 +10,17 @@
             <div class="card">
                 <h5>Card Heading 1</h5>
                 <h6>This is random card text</h6>
+                <p>extra info on card in very small font size</p>
             </div>
             <div class="card">
                 <h5>Card Heading 2</h5>
                 <h6>This is random card text</h6>
+                <p>extra info on card in very small font size</p>
             </div>
             <div class="card">
                 <h5>Card Heading 3</h5>
                 <h6>This is random card text</h6>
+                <p>extra info on card in very small font size</p>
             </div>
         </div>
     </body>
